# directory-management-system

./: .env.example  .gitattributes  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  README.md  SETUP_GUIDE.md  VERIFICATION_CHECKLIST.md
backend/: main.py  pyproject.toml  requirements.txt  seed.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  billing.py  employees.py  leaves.py  payroll.py  superadmin.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  database_models.py  employee.py  user.py
backend/app/schemas/: __init__.py  auth.py  billing.py  common.py  employee.py  employee_schema.py  leaves.py  payroll.py  user.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
